# tic-tac-gpt

./: .gitignore  .python-version  README.md  justfile  pyproject.toml  research_logs.md
notebooks/: explore.ipynb  training_curves.ipynb
report/: main.tex  neurips_2023.sty  neurips_2023.tex  references.bib
report/figures/: attention.tex  eval_table.tex  game_sample.tex  neuron_categories.tex  neuron_sample.tex  neurons_importance.tex  ood_sample.tex
tic_tac_gpt/: eval.py  find_neurons.py  train.py
tic_tac_gpt/data/: __init__.py  build_tic_tac_toe.py
tic_tac_gpt/model/: calculate_entropy.py  optimal_model.py
tic_tac_gpt/utils/: __init__.py
